--- a/frontend_neurasky/src/app/globals.css
+++ b/frontend_neurasky/src/app/globals.css
@@ -3,7 +3,11 @@
 /* @tailwind base;
 @tailwind components;
 @tailwind utilities; */
-
+@layer base {
+  .dark {
+    color-scheme: dark;
+  }
+}
 /* Global Variables */
 :root {
   --font-size: 16px;
@@ -47,8 +51,7 @@
 }
 
 /* Dark Mode Variables */
-@media (prefers-color-scheme: dark) {
-  :root {
+.dark {
     --background: oklch(0.145 0 0);
     --foreground: oklch(0.985 0 0);
     --card: oklch(0.145 0 0);
@@ -69,12 +72,12 @@
     --input: oklch(0.269 0 0);
     --ring: oklch(0.439 0 0);
   }
-}
+
+  
 
 /* Tailwind Base Styling */
-@layer base {
+@theme inline {
   /* Global Styles */
-  :root {
     --color-background: var(--background);
     --color-foreground: var(--foreground);
     --color-card: var(--card);
@@ -131,24 +134,4 @@
     font-weight: var(--font-weight-normal);
     line-height: 1.5;
   }
-}
-@layer base {
-  /* General Reset for all elements */
-  * {
-    border: 1px solid var(--color-border);
-    outline: 1px solid var(--color-ring);
-  }
-}
 
-
-/* Tailwind Typography */
-@layer base {
-  :where(:not(:has([class*=" text-"]), :not(:has([class^="text-"])))) {
-    h1 {
-      font-size: var(--text-2xl);
-      font-weight: var(--font-weight-medium);
-      line-height: 1.5;
-    }
-    /* Repeat for other headings and elements */
-  }
-}
